--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <a href="https://github.com/roniwellington" target="_blank">
             <div class="menu__user user">
               <div class="user__thumb"></div>
-              <h3 class="user__name">Diego Souza</h3>
+              <h3 class="user__name">RoniWellington</h3>
             </div>
           </a>
         </nav>
